add task controller and form that properly associates tasks to the list that you build the task from

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,12 @@
 <h3><%= @list.name %></h3>
 
-<% form_for(@task) do |f| %>
-	
-<% end %>
+
+	<%= form_for([@list, @task]) do |f| %> <!-- nested form for task associated with current list-->
+		<%= f.text_field :name, placeholder: "New Task" %> <br>
+	<% end %>
 
 <ul>
-	Tasks will end up listed here
+	<% @list.tasks.each do |task| %>
+		<a href="#"><li><%= task.name %></li></a>
+	<% end %>
 </ul>
