add validation notification

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Task Lists</h1>
 
 <%= form_for(@list) do |f| %>
-	<%= f.text_field :name, placeholder: "Make A New List" %>
+	<%= f.text_field :name, placeholder: (@list.errors.full_messages_for(:name).first || 'List Name') %>
 <% end %>
 
 <ul>
