--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,6 +7,6 @@
 
 <ul>
 	<% @list.tasks.each do |task| %>
-		<a href="#"><li><%= task.name %></li></a>
+		<li><%= link_to task.name, task_path(task) %></li>
 	<% end %>
 </ul>
