--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Task Lists</h1>
+<h1>Lists Index</h1>
 
 <%= form_for(@list) do |f| %>
 	<%= f.text_field :name, placeholder: (@list.errors.full_messages_for(:name).first || 'List Name') %>
