--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,12 +1,16 @@
+<h1>List Show</h1>
+
 <h3><%= @list.name %></h3>
 
 
 	<%= form_for([@list, @task]) do |f| %> <!-- nested form for task associated with current list-->
-		<%= f.text_field :name, placeholder: "New Task" %> <br>
+		<%= f.text_field :name, placeholder: (@task.errors.full_messages_for(:name).first || 'Task Name') %>
 	<% end %>
 
 <ul>
-	<% @list.tasks.each do |task| %>
-		<li><%= link_to task.name, task_path(task) %></li>
+	<% if @tasks %>
+		<% @tasks.each do |task| %>
+			<li><%= link_to task.name, task_path(task) %></li>
+		<% end %>
 	<% end %>
 </ul>
