added checkboxes to tasks on list show

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -10,7 +10,10 @@
 
 		<% @list.tasks.each do |task| %>
 			<% if task.id %>
-				<li><%= link_to task.name, task_path(task) %></li> 
+				<li>
+					<input type="checkbox">
+					<%= link_to task.name, task_path(task) %>	
+				</li> 
 			<% end %>
 		<% end %>
 
