added strikethrough styleing for completed tasks

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -10,7 +10,7 @@
 
 		<% @list.tasks.each do |task| %>
 			<% if task.id %>
-				<li>
+				<li class="<%= 'completed' if task.complete? %>">
 					<input type="checkbox">
 					<%= link_to task.name, task_path(task) %>	
 				</li> 
