added form submission for checkbox-marks complete. Patch request to tasks#update

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -11,8 +11,10 @@
 		<% @list.tasks.each do |task| %>
 			<% if task.id %>
 				<li class="<%= 'completed' if task.complete? %>">
-					<input type="checkbox" <%= "checked = checked"  if task.complete? %>>
-					<%= link_to task.name, task_path(task) %>	
+				<%= form_for(task) do |f| %>
+					<input class="check" type="checkbox" <%= "checked = checked"  if task.complete? %>>
+					<%= link_to task.name, task_path(task) %>
+				<% end %>	
 				</li> 
 			<% end %>
 		<% end %>
