--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -12,7 +12,7 @@
 			<% if task.id %>
 				<li class="<%= 'completed' if task.complete? %>">
 				<%= form_for(task) do |f| %>
-					<input class="check" type="checkbox" <%= "checked = checked"  if task.complete? %>>
+					<%= f.check_box :complete, class: "check", checked: (true if task.complete?) %>
 					<%= link_to task.name, task_path(task) %>
 				<% end %>	
 				</li> 
