--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,7 +6,9 @@
 
 <ul>
 	<% @lists.each do |list| %>
-		<li><%= link_to list.name, list_path(list) %></li>
+		<li><%= link_to list.name, list_path(list) %>
+		<%= button_to "Delete", list_path(list), method: :delete %>
+		</li>
 	<% end %>
 </ul>
 
